docs: record Phase 4b perf result and benchmark rework